fix: remove consent banner flicker

--- a/apps/frontend/src/assets/styles/main.css
+++ b/apps/frontend/src/assets/styles/main.css
@@ -30,3 +30,29 @@
 .background-color-white {
   background-color: white;
 }
+
+.fade-in {
+  visibility: hidden;
+  opacity: 0;
+  animation:
+    visibilityIn 0s ease-in-out forwards,
+    fadeIn 0.3s ease-in-out forwards 0.3s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes visibilityIn {
+  from {
+    visibility: hidden;
+  }
+  to {
+    visibility: visible;
+  }
+}
